--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,19 @@
         android:theme="@style/Theme.Choosecan"
         tools:targetApi="31">
 
+        <!-- Default activity -->
         <activity
             android:name=".main.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Other activities -->
+        <activity
+            android:name=".food.salad"
             android:exported="false" />
         <activity
             android:name=".DisimpanActivity"
